; ModuleID = '/home/carl/AnghaBench/linux/fs/proc/extr_base.c_proc_map_files_get_link.c'
source_filename = "/home/carl/AnghaBench/linux/fs/proc/extr_base.c_proc_map_files_get_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32 }
%struct.inode = type { i32 }
%struct.delayed_call = type { i32 }

@CAP_SYS_ADMIN = common dso_local global i32 0, align 4
@EPERM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.dentry*, %struct.inode*, %struct.delayed_call*)* @proc_map_files_get_link to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @proc_map_files_get_link(%struct.dentry* %0, %struct.inode* %1, %struct.delayed_call* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.dentry*, align 8
  %6 = alloca %struct.inode*, align 8
  %7 = alloca %struct.delayed_call*, align 8
  store %struct.dentry* %0, %struct.dentry** %5, align 8
  store %struct.inode* %1, %struct.inode** %6, align 8
  store %struct.delayed_call* %2, %struct.delayed_call** %7, align 8
  %8 = load i32, i32* @CAP_SYS_ADMIN, align 4
  %9 = call i32 @capable(i32 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %3
  %12 = load i32, i32* @EPERM, align 4
  %13 = sub nsw i32 0, %12
  %14 = call i8* @ERR_PTR(i32 %13)
  store i8* %14, i8** %4, align 8
  br label %20

15:                                               ; preds = %3
  %16 = load %struct.dentry*, %struct.dentry** %5, align 8
  %17 = load %struct.inode*, %struct.inode** %6, align 8
  %18 = load %struct.delayed_call*, %struct.delayed_call** %7, align 8
  %19 = call i8* @proc_pid_get_link(%struct.dentry* %16, %struct.inode* %17, %struct.delayed_call* %18)
  store i8* %19, i8** %4, align 8
  br label %20

20:                                               ; preds = %15, %11
  %21 = load i8*, i8** %4, align 8
  ret i8* %21
}

declare dso_local i32 @capable(i32) #1

declare dso_local i8* @ERR_PTR(i32) #1

declare dso_local i8* @proc_pid_get_link(%struct.dentry*, %struct.inode*, %struct.delayed_call*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
